--- a/AmericanSingLanguage/app/src/main/AndroidManifest.xml
+++ b/AmericanSingLanguage/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
 
          <activity
-            android:name="SecondPage"
+            android:name=".SecondPage"
             android:label="@string/app_name">
          </activity>
 
