--- a/AmericanSingLanguage/app/src/main/AndroidManifest.xml
+++ b/AmericanSingLanguage/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
             android:label="@string/app_name">
          </activity>
 
+        <activity
+            android:name=".ThirdPage"
+            android:label="@string/app_name">
+        </activity>
+
+
 
     </application>
 
