--- a/AmericanSingLanguage/app/src/main/AndroidManifest.xml
+++ b/AmericanSingLanguage/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:label="@string/app_name">
         </activity>
 
+        <activity
+            android:name=".FourthPage"
+            android:label="@string/app_name">
+        </activity>
+
 
 
     </application>
