--- a/AmericanSingLanguage/app/src/main/AndroidManifest.xml
+++ b/AmericanSingLanguage/app/src/main/AndroidManifest.xml
@@ -12,28 +12,21 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
          <activity
             android:name=".SecondPage"
             android:label="@string/app_name">
          </activity>
-
         <activity
             android:name=".ThirdPage"
             android:label="@string/app_name">
         </activity>
-
         <activity
-            android:name=".FourthPage"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:name=".StartTutorial" >
         </activity>
-
-
-
     </application>
 
 </manifest>
