--- a/AmericanSingLanguage/app/build.gradle
+++ b/AmericanSingLanguage/app/build.gradle
@@ -25,6 +25,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile files('/Developer/workspace/HackWestern/AmericanSingLanguage/libs/unirest-java-1.4.6-SNAPSHOT-withDependency-ShadedForAndroid.jar')
-
+    compile files('../libs/unirest-java-1.4.6-SNAPSHOT-withDependency-ShadedForAndroid.jar')
 }
