--- a/AmericanSingLanguage/app/src/main/AndroidManifest.xml
+++ b/AmericanSingLanguage/app/src/main/AndroidManifest.xml
@@ -25,8 +25,18 @@
         </activity>
         <activity
             android:label="@string/app_name"
+            android:name=".BeforeTutorialTwinkle" >
+        </activity>
+        <activity
+            android:label="@string/app_name"
             android:name=".StartTutorial" >
         </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".OtherSong" >
+        </activity>
+
+
     </application>
 
 </manifest>
